--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">ProjecteGithub</string>
+    <string-array name="sectors">
+        <item>Selecciona</item>
+        <item>Restaurants</item>
+        <item>Perruqueries</item>
+        <item>Botigues</item>
+    </string-array>
 </resources>
